<resources>
    <string name="app_name">Events Near Me</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="WelcomeMessage">Hello! Start finding events near you!</string>
    <string name="MainPageGo">Go!</string>
    <string name="EmptyText" />
    <string name="GetCoordinates">Get Coordinates</string>
    <string name="Warnings">Warnings</string>
    <string name="FreeStuff">Free Stuff</string>
    <string name="Entertainment">Entertainment</string>
    <string name="EventTypes">Filter which types of events you would like to see:</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <string name="welcome_message">Welcome to EventsNearMe!</string>
    <string name="welcome_submessage">What would you like to do?</string>
    <string name="find_something_near_me">Find something near me</string>
    <string name="share_an_event">Share an event</string>
    <string name="visit_newsfeed">Visit newsfeed</string>
    <string name="title_activity_events_map">EventsMap</string>
    <string name="filter_events_by">Filter events by:</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="create_an_event">Create an event</string>
    <string name="event_title">Event title</string>
    <string name="description">Description</string>
    <string name="add_tags">Add tags:</string>
    <string name="location">Location:</string>
    <string name="use_my_location">Use my location</string>
    <string name="select_on_map">Select on map</string>
    <string name="add_image_from_gallery">Add an image from the photo gallery</string>
    <string name="take_new_image">Take a picture</string>
    <string name="image_choice">Want to add an image? (optional)</string>
    <string name="share_event">Share event!</string>
    <string name="title_activity_event_info">EventInfo</string>
    <string name="event_info">Event Information</string>
    <string name="return_home">Return Home</string>
    <string name="title_activity_events_page">EventsPage</string>
    <string name="view_my_events">View My Events</string>
    <string name="events_you_made">Events You\'ve Made</string>
    <string name="Event_Picture">Event Picture</string>
    <string name="tag1">Food</string>
    <string name="tag2">Entertainment</string>
    <string name="tag3">Shopping</string>
    <string name="ClearFile">Clear File</string>
    <string name="title_activity_newsfeed">Newsfeed</string>
    <string name="newsfeed_title">Your Newsfeed</string>
    <string name="title_activity_select_on_map">Select On Map</string>
    <string name="SelectEventLocationOnMap">Select Event Location On Map</string>
    <string name="Submit">Submit</string>
    <string name="edit_event">Edit Event</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="update_event">Update Event</string>
    <string name="edit_image">Select an option below if you wish to update your current image (optional)</string>
    <string name="update_location">Update Location (only select if an update is needed)</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_edit_on_map">EditOnMap</string>
    <string name="log_out">Log out</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete this event? This operation cannot be undone.</string>
</resources>
