<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs4720.cs.virginia.edu.eventsnearme.WelcomePage"
    android:background="#7ec0ee">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_message"
        android:id="@+id/textView5"
        android:layout_marginTop="117dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_submessage"
        android:id="@+id/textView6"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_something_near_me"
        android:id="@+id/button3"
        android:layout_marginTop="145dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:onClick="findSomethingNearMe"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_an_event"
        android:id="@+id/button4"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="shareAnEvent"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_my_events"
        android:id="@+id/button8"
        android:layout_marginTop="17dp"
        android:onClick="goToEvents"
        android:layout_alignRight="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_below="@+id/button4"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear All My Events"
        android:id="@+id/button11"
        android:onClick="clearFile"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:visibility="invisible" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/loginButton"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="57dp"
        android:onClick="showLogInWindow"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_alignTop="@+id/loginButton"
        android:layout_toRightOf="@+id/loginButton"
        android:layout_toEndOf="@+id/loginButton"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:onClick="showRegisterWindow"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:id="@+id/logoutButton"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:visibility="invisible"
        android:onClick="logout"/>


</RelativeLayout>
