<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs4720.cs.virginia.edu.eventsnearme.EditEvent"
    android:background="#7ec0ee" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image_from_gallery"
            android:id="@+id/button12"
            android:layout_below="@+id/tag1"
            android:layout_alignLeft="@+id/radioGroup3"
            android:layout_alignStart="@+id/radioGroup3"
            android:layout_marginTop="66dp"
            android:onClick="dispatchPickPictureIntent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_event"
            android:id="@+id/button13"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="99dp"
            android:onClick="updateEvent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_new_image"
            android:id="@+id/button14"
            android:layout_alignTop="@+id/button12"
            android:layout_toRightOf="@+id/button12"
            android:layout_toEndOf="@+id/button12"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:onClick="dispatchTakePictureIntent" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_marginTop="46dp"
            android:hint="@string/event_title"
            android:layout_below="@+id/textView16"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="51dp"
            android:layout_marginStart="51dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_below="@+id/title"
            android:layout_alignLeft="@+id/title"
            android:layout_alignStart="@+id/title"
            android:hint="@string/description" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/tag1"
            android:layout_alignStart="@+id/tag1"
            android:layout_below="@+id/textView18"
            android:layout_above="@+id/button13"
            android:id="@+id/radioGroup3" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_my_current_location"
                android:id="@+id/radioButton"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/textView18"
                android:layout_alignLeft="@+id/textView18"
                android:layout_alignStart="@+id/textView18" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_on_map"
                android:id="@+id/radioButton2"
                android:layout_alignTop="@+id/radioButton"
                android:layout_alignLeft="@+id/tag2"
                android:layout_alignStart="@+id/tag2" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/edit_event"
            android:id="@+id/textView16"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/add_tags"
            android:id="@+id/textView17"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/description"
            android:layout_alignLeft="@+id/description"
            android:layout_alignStart="@+id/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/update_location"
            android:id="@+id/textView18"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/button12"
            android:layout_alignLeft="@+id/textView19"
            android:layout_alignStart="@+id/textView19" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/edit_image"
            android:id="@+id/textView19"
            android:layout_above="@+id/button14"
            android:layout_centerHorizontal="true" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/tag1"
            android:textOff="@string/tag1"
            android:textOn="@string/tag1"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/textView17"
            android:layout_alignLeft="@+id/textView17"
            android:layout_alignStart="@+id/textView17" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/tag2"
            android:textOff="@string/tag2"
            android:textOn="@string/tag2"
            android:layout_above="@+id/button12"
            android:layout_toRightOf="@+id/description"
            android:layout_toEndOf="@+id/description"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/tag3"
            android:layout_alignTop="@+id/tag2"
            android:layout_toRightOf="@+id/textView16"
            android:layout_toEndOf="@+id/textView16"
            android:textOff="@string/tag3"
            android:textOn="@string/tag3" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:layout_toRightOf="@+id/tag3"
            android:layout_toEndOf="@+id/tag3"
            android:layout_above="@+id/tag1" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton3"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/arrow_up_float"
                android:onClick="upVote" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Rating 1-10"
                android:id="@+id/rating"
                android:layout_alignTop="@+id/description"
                android:layout_alignLeft="@+id/button14"
                android:layout_alignStart="@+id/button14"
                android:layout_gravity="center_horizontal" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton4"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/arrow_down_float"
                android:onClick="downVote" />
        </LinearLayout>
    </RelativeLayout>
