<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs4720.cs.virginia.edu.eventsnearme.CreateEvent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_an_event"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_marginTop="46dp"
        android:hint="@string/event_title"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:hint="@string/description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/add_tags"
        android:id="@+id/textView10"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/description"
        android:layout_alignLeft="@+id/description"
        android:layout_alignStart="@+id/description" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/tag1"
        android:textOff="Tag 1"
        android:textOn="Tag 1"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/tag2"
        android:layout_alignTop="@+id/tag1"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:textOff="Tag 2"
        android:textOn="Tag 2" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/tag3"
        android:layout_alignTop="@+id/tag2"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9"
        android:textOff="Tag 3"
        android:textOn="Tag 3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/textView11"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/button6"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/tag1"
        android:layout_alignStart="@+id/tag1"
        android:layout_below="@+id/textView11"
        android:layout_above="@+id/button7"
        android:id="@+id/radioGroup2">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_my_location"
        android:id="@+id/radioButton"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_on_map"
        android:id="@+id/radioButton2"
        android:layout_alignTop="@+id/radioButton"
        android:layout_alignLeft="@+id/tag2"
        android:layout_alignStart="@+id/tag2" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_image_from_gallery"
        android:id="@+id/button6"
        android:layout_below="@+id/tag1"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_marginTop="66dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_event"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="99dp"
        android:onClick="shareEvent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_new_image"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button6"
        android:layout_toRightOf="@+id/button6"
        android:layout_toEndOf="@+id/button6"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:onClick="dispatchTakePictureIntent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/image_choice"
        android:id="@+id/textView14"
        android:layout_above="@+id/button9"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/tag3"
        android:layout_toEndOf="@+id/tag3"
        android:layout_above="@+id/tag1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upArrow"
            android:layout_gravity="center_horizontal"
            android:src="@android:drawable/arrow_up_float"
            android:onClick="upVote"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Rating 1-10"
            android:id="@+id/eventRating"
            android:layout_alignTop="@+id/description"
            android:layout_alignLeft="@+id/button9"
            android:layout_alignStart="@+id/button9"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/downArrow"
            android:layout_gravity="center_horizontal"
            android:src="@android:drawable/arrow_down_float"
            android:onClick="downVote"/>
    </LinearLayout>

</RelativeLayout>
